lessons index subtitle

--- a/templates/lesson/index.html.twig
+++ b/templates/lesson/index.html.twig
@@ -35,7 +35,7 @@
 
     {% include "_sections/page-title/default.html.twig" with { 
         title: 'Lessons',
-        subtitle: 'Notes taken during my learning of the code. These notes not only serve me as a reminder in my work but can also be used by others to complete their knowledge of programming.'
+        subtitle: 'Notes taken while learning programming. These notes not only serve me as a reminder in my work but can also be used by others to complete their knowledge of programming.'
     } %}
     
 {% endblock %}
