fix: lesson archive button text

--- a/templates/lesson/index.html.twig
+++ b/templates/lesson/index.html.twig
@@ -43,7 +43,7 @@
 {% block content %}
 
     {% include "_elements/button.html.twig" with {
-        label: 'View archives',
+        label: 'Lessons archive',
         icon: 'icon-line-archive',
         url: 'http://phpstack-749317-2528704.cloudwaysapps.com/lessons-list.php',
         target: '_blank',
