--- a/assets/sass/public/_typography.scss
+++ b/assets/sass/public/_typography.scss
@@ -180,7 +180,7 @@ small > span.sep-before::before {
 	font-size: 20px;
 	line-height: 30px;
 	color: #777777;
-	padding-bottom: 3rem;
+	margin-bottom: 3rem;
 }
 
 /* ----------------------------------------------------------------
