updated blogpost captioned img style

--- a/assets/sass/public/_content.scss
+++ b/assets/sass/public/_content.scss
@@ -80,7 +80,7 @@ code.hljs,
 
 /** Captions (Image + Code) */
 
-figcaption {
+.img-container.captioned {
     border: $card-border-width solid $card-border-color;
     border-top: none;
 }
