updated about page

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -104,8 +104,11 @@
                             desc: null,
                             skills: [
                                 ['PHP', 100],
-                                ['Symfony', 90],
                                 ['Javascript', 80],
+                                ['C', 60],
+                                ['Python', 60],
+                                ['Symfony', 90],
+                                ['Flask', 60],
                                 ['HTML', 100],
                                 ['CSS', 100],
                                 ['Sass', 70],
