fix: 103% counters on "about" + updated headlines on "blog" & "portfolio"

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -96,7 +96,7 @@
                         section: null,
                         title: 'My <span>tech stack</span> & <span>skills</sapn>',
                         offsetLeft: false,
-                        content: "I use the following skills to achieve the best projects I can."
+                        content: "Below are the languages, frameworks, platforms and tools, but also the soft skills that are useful to develop my applications."
                     } %}
                 
                     {% set skillColumns = [ {
