--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -30,7 +30,7 @@
 
     {% include "_sections/page-title/default.html.twig" with { 
         title: 'Blog',
-        subtitle: 'Latest article, curated by world experts.'
+        subtitle: 'This blog allows me to share some tips I discover as I improve my code practice. It also serves as a red thread in my journey from junior developer to senior developer.'
     } %}
     
 {% endblock %}
