--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -31,7 +31,7 @@
 
     {% include "_sections/page-title/default.html.twig" with { 
         title: 'Portfolio',
-        subtitle: 'Showcase of My Awesome Works'
+        subtitle: 'Showcase of the main applications I have created, but also work done in ecommerce and marketing. It shows my ability to adapt and the pleasure I have to learn new things and face new challenges.'
     } %}
     
 {% endblock %}
